@@ -1,3 +1,4 @@
+20/11/2000      Version 1.8.0 CODERET added. Corba test routines
 31/10/2000      Version 1.7.0 ENTRET added. GCG osf style changed.
                               Fixed -slower & -supper for multiple
                               sequences
